--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,24 +9,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:label="@string/app_name"
+        android:name=".App"
+        android:requestLegacyExternalStorage="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".app.FolderCompare"
+            android:name=".activity.FolderCompareActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".dialogs.CompareSettings" android:label="@string/app_name"></activity>
-        <activity android:name=".dialogs.FilterSettings" android:label="@string/app_name"></activity>
-        <activity android:name=".dialogs.DateTime" android:label="@string/app_name"></activity>
-        <activity android:name=".dialogs.FolderChooser" android:label="@string/app_name"></activity>
-        <activity android:name=".dialogs.About" android:label="@string/about_app"></activity>
-        <activity android:name=".dialogs.LicenseView" android:label="@string/license_title"></activity>
-        <activity android:name=".app.DiffView" android:label="@string/app_name"></activity>
-        
+        <activity android:name=".activity.FolderChooser" android:label="@string/compare_save_result"/>
+        <activity android:name=".activity.DiffViewActivity" android:label="@string/text_compare"/>
+        <activity android:name=".activity.SettingsActivity" android:label="@string/action_settings"/>
+        <activity android:name=".activity.FilterSettingsActivity" android:label="@string/app_name"/>
+        <activity android:name=".activity.BaseActivity"/>
+        <activity android:name=".activity.AboutActivity" android:label="@string/menu_about"/>
+        <activity android:name=".activity.LicenseViewActivity" android:label="@string/about_licenses_title"/>
     </application>
 
 </manifest>
